--- a/views/index.ejs
+++ b/views/index.ejs
@@ -27,17 +27,10 @@
 
   <main>
     <h1>Bem-vindo à Loja Retro World</h1>
-    <p>Jogos clássicos em destaque!</p>
-    <div id="destaques">
-      <div class="produto-destaque">
-        <img src="/images/destaque1-placeholder.png" alt="Produto em Destaque">
-        <p>Nome do Jogo 1 - R$ 49,99</p>
-      </div>
-      <div class="produto-destaque">
-        <img src="/images/destaque2-placeholder.png" alt="Produto em Destaque">
-        <p>Nome do Jogo 2 - R$ 59,99</p>
-      </div>
-    </div>
+    <p>Jogos você encontra aqui!</p>
+    <div id="produtos-destaque">
+      <img src="https://s2.glbimg.com/zUjD0GQtyLIhX8m_tXDSCDKyTjs=/620x430/e.glbimg.com/og/ed/f/original/2019/11/28/gettyimages-1178114626.jpg" alt="imagem black friday">
+    </div> <!-- Lista de produtos exibidos -->
   </main>
 
   <footer>
