--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -7,7 +7,11 @@
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-
+   <% if (alert) { %>
+        <script>
+            alert("<%= alert %>");
+        </script>
+    <% } %>
     <header>
         <img src="/images/logo.png" alt="Logo Retro Games" id="logo" onclick="window.location.href='/'">
         <h1>RetroWorld - Loja de Retro Games</h1>
