--- a/public/css/style.css
+++ b/public/css/style.css
@@ -134,3 +134,16 @@ footer {
   text-shadow: 0 0 5px #ff007f, 0 0 10px #ff007f;
   box-shadow: 0 -4px 8px rgba(0, 0, 0, 0.5);
 }
+
+input {
+  background-color: #021820; /* Cor de fundo escura para os inputs */
+  color: #fff; /* Texto branco */
+  border: 2px solid #ff007f; /* Borda rosa para combinar com o tema */
+  border-radius: 5px; /* Borda arredondada */
+  padding: 10px 15px; /* Espaçamento interno */
+  font-size: 16px; /* Tamanho da fonte */
+  width: 100%; /* Tornar o input responsivo */
+  margin: 10px 0; /* Espaçamento entre os inputs */
+  box-sizing: border-box; /* Garantir que o padding e a largura sejam somados corretamente */
+  transition: all 0.3s ease; /* Transição suave para efeitos de foco */
+}
