--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -25,7 +25,7 @@
                 
                 <button type="submit">Entrar</button>
             </form>
-            <a href="auth/signup">Cadastro</a>
+            <a href="signup">Cadastro</a>
             <p id="error-message" style="color: red; display: none;">Erro no login. Verifique suas credenciais.</p>
         </section>
     </main>
